syntax = "proto3";

package game.proto.login;
import public "game.proto";

option java_package = "com.game.proto.login";
//option java_outer_classname = "GameProto.login";
option java_multiple_files = true;


// 用户登录请求
message CS_player_login {
    string userId = 1;                // 用户ID
    int32 serverIndex = 2;                // 服务器索引
    string clientVersion = 3;           // 客户端版本
    string deviceId = 4;                // 设备ID
    string ip = 5;                      //ip
    string name = 6;                  //角色名
}

message SC_create_role {
    int32 result = 1;//是否创角 1是 0否
}

// 用户登录响应
message SC_player_login {
    int64 playerId = 1;
    int32 serverIndex = 2;
    string name = 3;
    int32 createnum = 4;
}

// 用户信息
message UserInfo {
    int64 userId = 1;                   // 用户ID
    string username = 2;                // 用户名
    int32 level = 3;                    // 等级
    int64 gold = 4;                     // 金币
    int64 exp = 5;                      // 经验值
    int64 createTime = 6;               // 创建时间
    int64 lastLoginTime = 7;            // 最后登录时间
    bool isOnline = 8;                  // 是否在线
}

// 用户信息请求
message UserInfoRequest {
    int64 userId = 1;                   // 用户ID（可选，不填则返回当前用户信息）
}

// 用户信息响应
message UserInfoResponse {
    ResponseStatus status = 1;          // 响应状态
    string message = 2;                 // 响应消息
    UserInfo userInfo = 3;              // 用户信息
}

// 用户更新请求
message UserUpdateRequest {
    int64 userId = 1;                   // 用户ID
    optional int32 level = 2;           // 等级（可选）
    optional int64 gold = 3;            // 金币（可选）
    optional int64 exp = 4;             // 经验值（可选）
}

// 用户更新响应
message UserUpdateResponse {
    ResponseStatus status = 1;          // 响应状态
    string message = 2;                 // 响应消息
    UserInfo userInfo = 3;              // 更新后的用户信息
}

// 聊天消息请求
message ChatRequest {
    int32 chatType = 1;                 // 聊天类型 (1:世界, 2:私聊, 3:公会)
    string content = 2;                 // 消息内容
    int64 targetUserId = 3;             // 目标用户ID（私聊时使用）
    int64 guildId = 4;                  // 公会ID（公会聊天时使用）
}

// 聊天消息响应
message ChatResponse {
    ResponseStatus status = 1;          // 响应状态
    string message = 2;                 // 响应消息
}

// 聊天消息广播
message ChatBroadcast {
    int64 messageId = 1;                // 消息ID
    int32 chatType = 2;                 // 聊天类型
    int64 fromUserId = 3;               // 发送者用户ID
    string fromUsername = 4;            // 发送者用户名
    string content = 5;                 // 消息内容
    int64 timestamp = 6;                // 发送时间戳
    int64 targetUserId = 7;             // 目标用户ID（私聊时使用）
    int64 guildId = 8;                  // 公会ID（公会聊天时使用）
}

// 用户登出请求
message LogoutRequest {
    int64 userId = 1;                   // 用户ID
    string reason = 2;                  // 登出原因
}

// 用户登出响应
message LogoutResponse {
    ResponseStatus status = 1;          // 响应状态
    string message = 2;                 // 响应消息
}